--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -9,9 +9,9 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "vue2-redux": "next",
     "redux": "^3.7.2",
-    "vue": "^2.3.3"
+    "vue": "^2.3.3",
+    "vue2-redux": "^1.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
